build: Update bindgen version and add vendor feature for Windows linking

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,6 @@ libvlc-sys = { path = "libvlc-sys" }
 
 [features]
 default = []
+#
+vendor = ["libvlc-sys/vendor"]
 bindgen = ["libvlc-sys/bindgen"]
