--- a/libvlc-sys/Cargo.toml
+++ b/libvlc-sys/Cargo.toml
@@ -21,12 +21,13 @@ crate-type = ["rlib"]
 libc = "0.2"
 
 [build-dependencies]
-bindgen = {version = "0.71", optional = true }
+bindgen = { version = "0.72", optional = true }
 pkg-config = "0.3"
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
-vswhom = "0.1.0"
+vswhom = { version = "0.1.0", optional = true }
 
 [features]
 default = []
+vendor = ["dep:vswhom"]
 bindgen = ["dep:bindgen"]
