--- a/libvlc-sys/Cargo.toml
+++ b/libvlc-sys/Cargo.toml
@@ -25,9 +25,8 @@ bindgen = { version = "0.72", optional = true }
 pkg-config = "0.3"
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
-vswhom = { version = "0.1.0", optional = true }
+vswhom = { version = "0.1.0" }
 
 [features]
 default = []
-vendor = ["dep:vswhom"]
 bindgen = ["dep:bindgen"]
