--- a/libvlc-sys/Cargo.toml
+++ b/libvlc-sys/Cargo.toml
@@ -25,6 +25,7 @@ bindgen = { version = "0.72", optional = true }
 pkg-config = "0.3"
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
+vswhom-sys = {git = "https://github.com/nabijaczleweli/vswhom-sys.rs.git"}
 vswhom = { version = "0.1.0" }
 
 [features]
