--- a/libvlc-sys/Cargo.toml
+++ b/libvlc-sys/Cargo.toml
@@ -25,8 +25,10 @@ bindgen = { version = "0.72", optional = true }
 pkg-config = "0.3"
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
-vswhom-sys = {git = "https://github.com/nabijaczleweli/vswhom-sys.rs.git"}
 vswhom = { version = "0.1.0" }
+
+[patch.crates-io]
+vswhom-sys = { git = "https://github.com/nabijaczleweli/vswhom-sys.rs.git" }
 
 [features]
 default = []
