--- a/libvlc-sys/Cargo.toml
+++ b/libvlc-sys/Cargo.toml
@@ -22,14 +22,12 @@ libc = "0.2"
 
 [build-dependencies]
 bindgen = { version = "0.72", optional = true }
-pkg-config = "0.3"
-
-[target.'cfg(target_os = "windows")'.build-dependencies]
-vswhom = { version = "0.1.0" }
-
-[patch.crates-io]
-vswhom-sys = { git = "https://github.com/nabijaczleweli/vswhom-sys.rs.git" }
+pkg-config = { version = "0.3", optional = true }
+fs_extra = {version = "1", optional = true}
 
 [features]
 default = []
+vendor = ["bindgen"]
+runtime = ["dep:fs_extra"]
+pkg_config = ["dep:pkg-config"]
 bindgen = ["dep:bindgen"]
