--- a/libvlc-sys/Cargo.toml
+++ b/libvlc-sys/Cargo.toml
@@ -27,6 +27,7 @@ fs_extra = {version = "1", optional = true}
 
 [features]
 default = []
+macos_sdk = [] # Using MacOS SDK archive https://artifacts.videolan.org/vlc/nightly-macos-arm64/20250612-0413/vlc-macos-sdk-4.0.0-dev-arm64-52ed2542.tar.gz
 vendor = ["bindgen"]
 runtime = ["dep:fs_extra"]
 pkg_config = ["dep:pkg-config"]
